# Nodel

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  build.sh  conanfile.txt  index.html
doc/: DoxygenLayout.xml  doc.css
docs/: DoxygenLayout.xml  doc.css  index.html
docs/html/: _comparator_8hxx_source.html  _csv_serializer_8hxx_source.html  _d_b_8hxx_source.html  _d_b_manager_8hxx_source.html  _directory_8hxx_source.html  _file_8hxx_source.html  _finally_8hxx_source.html  _flags_8hxx_source.html  _item_range_8h_source.html  _item_range_8hxx_source.html  _json_serializer_8hxx_source.html  _key_8h.html  _key_8h.js  _key_8h__dep__incl.map  _key_8h__dep__incl.md5  _key_8h__incl.map  _key_8h__incl.md5  _key_8h_source.html  _key_8hxx.html  _key_8hxx.js  _key_8hxx__dep__incl.map  _key_8hxx__dep__incl.md5  _key_8hxx__incl.map  _key_8hxx__incl.md5  _key_8hxx_source.html  _key_range_8h_source.html  _key_range_8hxx_source.html  _l_c_s_8hxx_source.html  _nodel_item_iter_8hxx_source.html  _nodel_key_iter_8hxx_source.html  _nodel_object_8hxx_source.html  _nodel_tree_iter_8hxx_source.html  _nodel_value_iter_8hxx_source.html  _object_8h.html  _object_8h.js  _object_8h__dep__incl.map  _object_8h__dep__incl.md5  _object_8h__incl.map  _object_8h__incl.md5  _object_8h_source.html  (+321 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  (+19 more)
examples/: basic.cpp  basic.cxx  find.cpp  find.cxx  rocksdb.cpp  rocksdb.cxx
include/nodel/: core.h  filesystem.h  fmt_support.h  rocksdb.h
include/nodel/core/: Interval.h  ItemRange.h  Key.h  KeyRange.h  LCS.h  Object.h  Oid.h  Query.h  Slice.h  URI.h  ValueRange.h  algo.h  bind.h  serialize.h  uri.h
include/nodel/filesystem/: CsvFile.h  DefaultRegistry.h  Directory.h  Directory2.h  File.h  GenericFile.h  JsonFile.h  Registry.h  SerialFileImpl.h  TextFile.h  ZipFile.h  filesystem.h
include/nodel/format/: json.h
include/nodel/parser/: csv.h  json.h  toml.h  xml.h
include/nodel/pyext/: NodelItemIter.h  NodelKeyIter.h  NodelObject.h  NodelTreeIter.h  NodelValueIter.h  module.h  support.h
include/nodel/rocksdb/: Comparator.h  DB.h  DBManager.h  KeyValueStore.h  serialize.h
include/nodel/serializer/: CsvSerializer.h  StringSerializer.h
include/nodel/support/: Finally.h  Flags.h  Ref.h  Stopwatch.h  exception.h  integer.h  intern.h  leak_detect.h  logging.h  parse.h  string.h  types.h
nodel/: core.h  core.hxx  filesystem.hxx  fmt_support.h  fmt_support.hxx  kvdb.hxx  nodel.h  rocksdb.hxx  types.h
nodel/core/: Interval.h  ItemRange.h  ItemRange.inl  Key.h  Key.hxx  KeyRange.h  LCS.h  LCS.hxx  Object.h  Object.hxx  Oid.h  Oid.hxx  Query.h  Query.hxx  Slice.hxx  ValueRange.h  ValueRange.hxx  algo.h  algo.hxx  bind.h  bind.hxx  serialize.h  uri.h  uri.hxx
nodel/filesystem/: CsvFile.h  DefaultRegistry.h  Directory.h  Directory.h.sparse  Directory.hxx  File.h  File.hxx  JsonFile.h  Registry.h  Registry.hxx  SerialFile.h  SerialFile.hxx  SerialFileImpl.hxx  TextFile.h  ZipFile.hxx
nodel/format/: csv.h  json.h
nodel/impl/: CsvParser.h  FileSystemDataSource.h  Flags.h  ILoader.h  ItemRange.h  Key.h  KeyRange.h  Node.h  Object.h  Oid.h  Ref.h  Stopwatch.h  StreamIterator.h  ValueRange.h  algo.h  design.txt  design_notes.txt  except.h  json.h  logging.h  ops.h  path.h  str_util.h  support.h  types.h
nodel/kvdb/: Comparator.hxx  DB.hxx  DBManager.hxx  serialize.hxx
nodel/parser/: csv.h  csv.hxx  json.hxx
nodel/pyext/: NodelItemIter.h  NodelItemIter.hxx  NodelKeyIter.h  NodelKeyIter.hxx  NodelObject.hxx  NodelTreeIter.hxx  NodelValueIter.hxx  module.h  module.hxx  support.hxx
nodel/rocksdb/: Comparator.hxx  DB.h  DB.hxx  DBManager.h  DBManager.hxx  KeyStore.h  serialize.hxx
nodel/serialization/: csv.h  json.h
nodel/serializer/: CsvSerializer.hxx  JsonSerializer.hxx  Serializer.hxx  StringSerializer.hxx
nodel/support/: Flags.hxx  Ref.h  Ref.hxx  Stopwatch.h  StreamIterator.h  exception.hxx  integer.hxx  intern.h  intern.hxx  logging.h  logging.hxx  parse.h  parse.hxx  string.h  string.hxx  types.hxx
nodel/unused/: Node.h  ObjectPlusNode.h  String.h  Value.h  json_incr.h
pyext/: .gitignore  BUGS.txt  NodelItemIter.cpp  NodelItemIter.cxx  NodelKeyIter.cpp  NodelKeyIter.cxx  NodelObject.cpp  NodelObject.cxx  NodelTreeIter.cpp  NodelTreeIter.cxx  NodelValueIter.cpp  NodelValueIter.cxx  build.sh  module.cpp  module.cxx  setup.cfg  setup.py
pyext/nodel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyext/test/: test_filesystem.py  test_module.py  test_object.py
test/: example.json  large_example_2.json  main.cpp  main.cxx  test_csv.cpp  test_csv.cxx  test_filesystem.cpp  test_filesystem.cxx  test_intern.cpp  test_intern.cxx  test_json.cpp  test_json.cxx  test_key.cpp  test_key.cxx  test_kvdb.cxx  test_lcs.cpp  test_lcs.cxx  test_node.cpp  test_object.cpp  test_object.cxx  test_object.d  test_query.cpp  test_query.cxx  test_ref.cpp  test_ref.cxx  test_rocksdb.cpp  test_rocksdb.cxx  test_uri.cpp  test_uri.cxx  test_zip.cxx
test_data/: example.csv  example.txt  large_example_1.json  table.json
test_data/more/: example.csv
